# src/main/java/se/sundsvall/incident/api/IncidentResource.java
@@ -4,6 +4,7 @@ import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
 import static org.springframework.http.MediaType.APPLICATION_PROBLEM_JSON_VALUE;
 import static org.springframework.http.ResponseEntity.ok;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -24,17 +25,26 @@ import se.sundsvall.incident.api.model.IncidentOepResponse;
 import se.sundsvall.incident.api.model.IncidentResponse;
 import se.sundsvall.incident.api.model.IncidentSaveRequest;
 import se.sundsvall.incident.api.model.IncidentSaveResponse;
+import se.sundsvall.incident.api.model.ValidStatusResponse;
+import se.sundsvall.incident.integration.db.entity.util.Status;
 import se.sundsvall.incident.service.IncidentService;
 
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
 
 @RestController
 @RequestMapping("/incident")
 @Tag(name = "Incident resources")
+@ApiResponses(value = {
+	@ApiResponse(responseCode = "400", description = "Bad Request",
+		content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(implementation = Problem.class))),
+	@ApiResponse(responseCode = "500", description = "Internal Server Error",
+		content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(implementation = Problem.class)))
+})
 public class IncidentResource {
 
 	private final IncidentService incidentService;
@@ -45,11 +55,7 @@ public class IncidentResource {
 
 	@Operation(summary = "Get list of incidents",
 		responses = {
-			@ApiResponse(responseCode = "200", description = "Successful Operation", useReturnTypeSchema = true),
-			@ApiResponse(responseCode = "400", description = "Bad Request",
-				content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(implementation = Problem.class))),
-			@ApiResponse(responseCode = "500", description = "Internal Server Error",
-				content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(implementation = Problem.class)))
+			@ApiResponse(responseCode = "200", description = "Successful Operation", useReturnTypeSchema = true)
 		})
 	@GetMapping(produces = {APPLICATION_PROBLEM_JSON_VALUE, APPLICATION_JSON_VALUE})
 	ResponseEntity<List<IncidentResponse>> fetchAllIncidents(
@@ -62,11 +68,7 @@ public class IncidentResource {
 	@Operation(summary = "Get a incident by id",
 		responses = {
 			@ApiResponse(responseCode = "200", description = "Successful Operation", useReturnTypeSchema = true),
-			@ApiResponse(responseCode = "400", description = "Bad Request",
-				content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(implementation = Problem.class))),
 			@ApiResponse(responseCode = "404", description = "Not Found",
-				content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(implementation = Problem.class))),
-			@ApiResponse(responseCode = "500", description = "Internal Server Error",
 				content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(implementation = Problem.class)))
 		})
 	@GetMapping(path = "/{id}", produces = {APPLICATION_JSON_VALUE, APPLICATION_PROBLEM_JSON_VALUE})
@@ -78,27 +80,31 @@ public class IncidentResource {
 	@Operation(summary = "Get status for a OeP incident",
 		responses = {
 			@ApiResponse(responseCode = "200", description = "Successful Operation", useReturnTypeSchema = true),
-			@ApiResponse(responseCode = "400", description = "Bad Request",
-				content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(implementation = Problem.class))),
 			@ApiResponse(responseCode = "404", description = "Not Found",
-				content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(implementation = Problem.class))),
-			@ApiResponse(responseCode = "500", description = "Internal Server Error",
 				content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(implementation = Problem.class)))
 		})
-	@GetMapping(path = "/internal/oep/status/{externalCaseId}")
+	@GetMapping(path = "/internal/oep/{externalCaseId}/status")
 	ResponseEntity<IncidentOepResponse> getStatusForOeP(
 		@PathVariable("externalCaseId") final String externalCaseId) {
 		var response = incidentService.fetchOepIncidentStatus(externalCaseId);
 		return ok(response);
 	}
 
+	@Operation(summary = "Get a list of valid statuses")
+	@ApiResponse(
+		responseCode = "200", description = "Successful Operation", useReturnTypeSchema = true)
+	@GetMapping(value = "/statuses", produces = {APPLICATION_JSON_VALUE, APPLICATION_PROBLEM_JSON_VALUE})
+	public ResponseEntity<List<ValidStatusResponse>> getValidIncidentStatuses() {
+		return ok(Arrays.stream(Status.values())
+			.map(dto -> ValidStatusResponse.builder()
+				.withStatus(dto.getLabel())
+				.withStatusId(dto.getValue()).build())
+			.toList());
+	}
+
 	@Operation(summary = "Create a incident and send notification",
 		responses = {
-			@ApiResponse(responseCode = "200", description = "Successful Operation", useReturnTypeSchema = true),
-			@ApiResponse(responseCode = "400", description = "Bad Request",
-				content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(implementation = Problem.class))),
-			@ApiResponse(responseCode = "500", description = "Internal Server Error",
-				content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(implementation = Problem.class)))
+			@ApiResponse(responseCode = "200", description = "Successful Operation", useReturnTypeSchema = true)
 		})
 	@PostMapping(produces = {APPLICATION_JSON_VALUE, APPLICATION_PROBLEM_JSON_VALUE}, consumes = APPLICATION_JSON_VALUE)
 	ResponseEntity<IncidentSaveResponse> createIncident(@RequestBody @Valid final IncidentSaveRequest incidentSaveRequest) {
@@ -109,15 +115,11 @@ public class IncidentResource {
 	@Operation(summary = "Update the status for a specific incident",
 		responses = {
 			@ApiResponse(responseCode = "200", description = "Successful Operation", useReturnTypeSchema = true),
-			@ApiResponse(responseCode = "400", description = "Bad Request",
-				content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(implementation = Problem.class))),
 			@ApiResponse(responseCode = "404", description = "Not Found",
-				content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(implementation = Problem.class))),
-			@ApiResponse(responseCode = "500", description = "Internal Server Error",
 				content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(implementation = Problem.class)))
 		})
-	@PatchMapping(path = "/statusupdate", produces = APPLICATION_PROBLEM_JSON_VALUE)
-	ResponseEntity<Void> updateIncidentStatus(
+	@PatchMapping(path = "/status", produces = APPLICATION_PROBLEM_JSON_VALUE)
+	ResponseEntity<Void> patchStatus(
 		@RequestParam(name = "id") final String incidentId,
 		@RequestParam(name = "status") final Integer statusId) {
 		incidentService.updateIncidentStatus(incidentId, statusId);
@@ -127,15 +129,11 @@ public class IncidentResource {
 	@Operation(summary = "Set incident feedback",
 		responses = {
 			@ApiResponse(responseCode = "200", description = "Successful Operation", useReturnTypeSchema = true),
-			@ApiResponse(responseCode = "400", description = "Bad Request",
-				content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(implementation = Problem.class))),
 			@ApiResponse(responseCode = "404", description = "Not Found",
-				content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(implementation = Problem.class))),
-			@ApiResponse(responseCode = "500", description = "Internal Server Error",
 				content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(implementation = Problem.class)))
 		})
-	@PatchMapping(path = "/feedbackupdate", produces = APPLICATION_PROBLEM_JSON_VALUE)
-	ResponseEntity<Void> updateIncidentFeedback(
+	@PatchMapping(path = "/feedback", produces = APPLICATION_PROBLEM_JSON_VALUE)
+	ResponseEntity<Void> patchFeedback(
 		@RequestParam(name = "id") final String incidentId,
 		@RequestParam(name = "feedback") final String feedback) {
 		incidentService.updateIncidentFeedback(incidentId, feedback);
