# src/main/resources/openapi.yaml
@@ -108,14 +108,14 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Category'
-        "500":
-          description: Internal Server Error
+        "400":
+          description: Bad Request
           content:
             application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
-        "400":
-          description: Bad Request
+        "500":
+          description: Internal Server Error
           content:
             application/problem+json:
               schema:
@@ -134,24 +134,24 @@ paths:
       responses:
         "201":
           description: Category created
-        "500":
-          description: Internal Server Error
-          content:
-            application/problem+json:
-              schema:
-                $ref: '#/components/schemas/Problem'
         "400":
           description: Bad Request
           content:
             application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
-  /incident/statusupdate:
+        "500":
+          description: Internal Server Error
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+  /incident/status:
     patch:
       tags:
       - Incident resources
       summary: Update the status for a specific incident
-      operationId: updateIncidentStatus
+      operationId: patchStatus
       parameters:
       - name: id
         in: query
@@ -167,14 +167,14 @@ paths:
       responses:
         "200":
           description: Successful Operation
-        "400":
-          description: Bad Request
+        "404":
+          description: Not Found
           content:
             application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
-        "404":
-          description: Not Found
+        "400":
+          description: Bad Request
           content:
             application/problem+json:
               schema:
@@ -185,12 +185,12 @@ paths:
             application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
-  /incident/feedbackupdate:
+  /incident/feedback:
     patch:
       tags:
       - Incident resources
       summary: Set incident feedback
-      operationId: updateIncidentFeedback
+      operationId: patchFeedback
       parameters:
       - name: id
         in: query
@@ -205,14 +205,14 @@ paths:
       responses:
         "200":
           description: Successful Operation
-        "400":
-          description: Bad Request
+        "404":
+          description: Not Found
           content:
             application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
-        "404":
-          description: Not Found
+        "400":
+          description: Bad Request
           content:
             application/problem+json:
               schema:
@@ -252,14 +252,14 @@ paths:
             application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
-        "500":
-          description: Internal Server Error
+        "400":
+          description: Bad Request
           content:
             application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
-        "400":
-          description: Bad Request
+        "500":
+          description: Internal Server Error
           content:
             application/problem+json:
               schema:
@@ -285,14 +285,14 @@ paths:
             application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
-        "500":
-          description: Internal Server Error
+        "400":
+          description: Bad Request
           content:
             application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
-        "400":
-          description: Bad Request
+        "500":
+          description: Internal Server Error
           content:
             application/problem+json:
               schema:
@@ -331,14 +331,14 @@ paths:
             application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
-        "500":
-          description: Internal Server Error
+        "400":
+          description: Bad Request
           content:
             application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
-        "400":
-          description: Bad Request
+        "500":
+          description: Internal Server Error
           content:
             application/problem+json:
               schema:
@@ -365,14 +365,14 @@ paths:
             application/problem+json:
               schema:
                 $ref: '#/components/schemas/IncidentResponse'
-        "400":
-          description: Bad Request
+        "404":
+          description: Not Found
           content:
             application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
-        "404":
-          description: Not Found
+        "400":
+          description: Bad Request
           content:
             application/problem+json:
               schema:
@@ -383,7 +383,39 @@ paths:
             application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
-  /incident/internal/oep/status/{externalCaseId}:
+  /incident/statuses:
+    get:
+      tags:
+      - Incident resources
+      summary: Get a list of valid statuses
+      operationId: getValidIncidentStatuses
+      responses:
+        "400":
+          description: Bad Request
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "200":
+          description: Successful Operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ValidStatusResponse'
+            application/problem+json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ValidStatusResponse'
+        "500":
+          description: Internal Server Error
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+  /incident/internal/oep/{externalCaseId}/status:
     get:
       tags:
       - Incident resources
@@ -402,105 +434,88 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/IncidentOepResponse'
-        "400":
-          description: Bad Request
-          content:
-            application/problem+json:
-              schema:
-                $ref: '#/components/schemas/Problem'
         "404":
           description: Not Found
           content:
             application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
+        "400":
+          description: Bad Request
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
         "500":
           description: Internal Server Error
           content:
             application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
-  /api/validstatuses:
+  /category/valid:
     get:
       tags:
-      - Valid list resources
-      summary: Get a list of valid statuses
-      operationId: getValidStatuses
-      responses:
-        "500":
-          description: Internal Server Error
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Problem'
-        "400":
-          description: Bad Request
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Problem'
-        "200":
-          description: Successful Operation
-          content:
-            '*/*':
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/ValidStatusResponse'
-  /api/validcategories:
-    get:
-      tags:
-      - Valid list resources
+      - Category resources
       summary: Get a list of valid categories
       operationId: getValidCategories
       responses:
-        "500":
-          description: Internal Server Error
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Problem'
         "400":
           description: Bad Request
           content:
-            '*/*':
+            application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
         "200":
           description: Successful Operation
           content:
-            '*/*':
+            application/problem+json:
               schema:
                 type: array
                 items:
                   $ref: '#/components/schemas/ValidCategoryResponse'
-  /api/validcategories/oep:
-    get:
-      tags:
-      - Valid list resources
-      summary: Get a list of valid categories in oep format
-      operationId: getValidOepCategories
-      responses:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ValidCategoryResponse'
         "500":
           description: Internal Server Error
           content:
-            '*/*':
+            application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
+  /category/valid/oep:
+    get:
+      tags:
+      - Category resources
+      summary: Get a list of valid categories in oep format
+      operationId: getValidOepCategories
+      responses:
         "400":
           description: Bad Request
           content:
-            '*/*':
+            application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
         "200":
           description: Successful Operation
           content:
-            '*/*':
+            application/problem+json:
               schema:
                 type: array
                 items:
                   $ref: '#/components/schemas/ValidOepCategoryResponse'
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ValidOepCategoryResponse'
+        "500":
+          description: Internal Server Error
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
   /api-docs:
     get:
       tags:
@@ -519,33 +534,6 @@ paths:
       x-wso2-mutual-ssl: Optional
 components:
   schemas:
-    Problem:
-      type: object
-      properties:
-        instance:
-          type: string
-          format: uri
-        type:
-          type: string
-          format: uri
-        parameters:
-          type: object
-          additionalProperties:
-            type: object
-        status:
-          $ref: '#/components/schemas/StatusType'
-        title:
-          type: string
-        detail:
-          type: string
-    StatusType:
-      type: object
-      properties:
-        statusCode:
-          type: integer
-          format: int32
-        reasonPhrase:
-          type: string
     AttachmentRequest:
       required:
       - category
@@ -620,13 +608,44 @@ components:
           description: Attachments
           items:
             $ref: '#/components/schemas/AttachmentRequest'
+    Problem:
+      type: object
+      properties:
+        instance:
+          type: string
+          format: uri
+        type:
+          type: string
+          format: uri
+        parameters:
+          type: object
+          additionalProperties:
+            type: object
+        status:
+          $ref: '#/components/schemas/StatusType'
+        title:
+          type: string
+        detail:
+          type: string
+    StatusType:
+      type: object
+      properties:
+        statusCode:
+          type: integer
+          format: int32
+        reasonPhrase:
+          type: string
     IncidentSaveResponse:
       type: object
       properties:
         status:
           type: string
+          description: Incident status
+          example: KLART
         incidentId:
           type: string
+          description: The incident ID
+          example: 58f96da8-6d76-4fa6-bb92-64f71fdc6aa5
     CategoryPost:
       required:
       - forwardTo
@@ -715,25 +734,42 @@ components:
           type: string
           description: The file content as base64 encoded string
           example: aGVqaGVq
+      description: Attachments
     IncidentResponse:
       type: object
       properties:
         incidentId:
           type: string
+          description: The Incident ID
+          example: 58f96da8-6d76-4fa6-bb92-64f71fdc6aa5
         externalCaseId:
           type: string
+          description: The external case ID
+          example: "12345"
         personId:
           type: string
+          description: The ID of the person
+          example: 58f96da8-6d76-4fa6-bb92-64f71fdc6aa5
         phoneNumber:
           type: string
+          description: The phone number
+          example: "0701234578"
         email:
           type: string
+          description: Reporters e-mail address
+          example: someemail@somehost.se
         contactMethod:
           type: string
+          description: The way the reporter want to be contacted
+          example: email
         description:
           type: string
+          description: Description of the incident
+          example: A description
         status:
           type: string
+          description: Status of the incident
+          example: INSKICKAT
           enum:
           - INSKICKAT
           - KLART
@@ -747,47 +783,69 @@ components:
           $ref: '#/components/schemas/Category'
         attachments:
           type: array
+          description: Attachments
           items:
             $ref: '#/components/schemas/Attachment'
         created:
           type: string
+          description: When the incident were created
           format: date-time
         updated:
           type: string
+          description: When the incident were last updated
           format: date-time
-    IncidentOepResponse:
-      type: object
-      properties:
-        incidentId:
-          type: string
-        externalCaseId:
-          type: string
-        statusId:
-          type: integer
-          format: int32
-        statusText:
-          type: string
     ValidStatusResponse:
       type: object
       properties:
         statusId:
           type: integer
+          description: The ID of the status
           format: int32
+          example: 5
         status:
           type: string
+          description: The status name
+          example: INSKICKAT
+    IncidentOepResponse:
+      type: object
+      properties:
+        incidentId:
+          type: string
+          description: The incident ID
+          example: 58f96da8-6d76-4fa6-bb92-64f71fdc6aa5
+        externalCaseId:
+          type: string
+          description: The external case ID
+          example: "12345"
+        statusId:
+          type: integer
+          description: Status of the incident
+          format: int32
+        statusText:
+          type: string
+          description: Status text
+          example: Klart
     ValidCategoryResponse:
       type: object
       properties:
         category:
           type: string
+          description: The name of the category
+          example: VATTENMÄTARE
         categoryId:
           type: integer
+          description: The ID of the category
           format: int32
+          example: 15
     ValidOepCategoryResponse:
       type: object
       properties:
         key:
           type: string
+          description: The category ID
+          example: "15"
         value:
           type: string
+          description: The category label
+          example: VATTENMÄTARE
   securitySchemes: {}
